add API for Admin about many-user
